font awesome icons fixed

--- a/template.html
+++ b/template.html
@@ -90,11 +90,11 @@
 												<div class="profile-intro"><b>Email: </b>sultonovyura@gmail.com</div>
 											</li>
 											<li>
-												<div class="profile-icon"><i class="fa fa-facebook-square"></i></div>
+												<div class="profile-icon"><i class="fab fa-facebook-square"></i></div>
 												<div class="profile-intro"><b><a href="https://www.facebook.com/yura.sultonov">facebook.com/yura.sultonov</a></b></div>
 											</li>
 											<li>
-												<div class="profile-icon"><i class="fa fa-linkedin-square"></i></div>
+												<div class="profile-icon"><i class="fab fa-linkedin-in"></i></div>
 												<div class="profile-intro"><b><a href="https://www.linkedin.com/in/yura-sultonov/">linkedin.com/in/yura-sultonov/</a></b></div>
 											</li>
 										</ul>
@@ -110,11 +110,11 @@
 												<div class="profile-intro"><b>Address: </b>Tashkent, Uzbekistan</div>
 											</li>
 											<li>
-												<div class="profile-icon"><i class="fa fa-github-square"></i></div>
+												<div class="profile-icon"><i class="fab fa-github-square"></i></div>
 												<div class="profile-intro"><b><a href="https://github.com/yura-sultonov">github.com/yura-sultonov</a></b></div>
 											</li>											
 											<li>
-												<div class="profile-icon"><i class="fa fa-instagram"></i></div>
+												<div class="profile-icon"><i class="fab fa-instagram"></i></div>
 												<div class="profile-intro"><b><a href="http://instagram.com/yura_sultonov">instagram.com/yura_sultonov</a></b></div>
 											</li>		
 										</ul>
@@ -649,6 +649,7 @@
 		<script src="js/typed.min.js"></script>
 		<script src="js/isotope.pkgd.min.js"></script>
 		<script src="js/jquery.magnific-popup.js"></script>
+		<script src="fontawesome-pro/js/all.min.js"></script>
     </div>
 </body>
 </html>
