--- a/profile.html
+++ b/profile.html
@@ -42,6 +42,26 @@ use-site-title: true
                     <div class="col-xs-12 col-md-6">
                         <ul class="profile-data">
                             <li>
+                                <div class="profile-icon"><i class="fa fa-phone"></i></div>
+                                <div class="profile-intro"><b>Phone: </b>+998-(90)-979-00-58</div>
+                            </li>
+                            <li>
+                                <div class="profile-icon"><i class="fa fa-envelope-open"></i></div>
+                                <div class="profile-intro"><b>Email: </b>sultonovyura@gmail.com</div>
+                            </li>
+                            <li>
+                                <div class="profile-icon"><i class="fab fa-facebook-square"></i></div>
+                                <div class="profile-intro"><b><a href="https://www.facebook.com/yura.sultonov">facebook.com/yura.sultonov</a></b></div>
+                            </li>
+                            <li>
+                                <div class="profile-icon"><i class="fab fa-linkedin-in"></i></div>
+                                <div class="profile-intro"><b><a href="https://www.linkedin.com/in/yura-sultonov/">linkedin.com/in/yura-sultonov/</a></b></div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <ul class="profile-data">
+                            <li>
                                 <div class="profile-icon"><i class="fa fa-calendar"></i></div>
                                 <div class="profile-intro"><b>Birthday: </b>March 15, 1995</div>
                             </li>
@@ -50,16 +70,15 @@ use-site-title: true
                                 <div class="profile-intro"><b>Address: </b>Tashkent, Uzbekistan</div>
                             </li>
                             <li>
-                                <div class="profile-icon"><i class="fa fa-github-square"></i></div>
+                                <div class="profile-icon"><i class="fab fa-github-square"></i></div>
                                 <div class="profile-intro"><b><a href="https://github.com/yura-sultonov">github.com/yura-sultonov</a></b></div>
                             </li>
                             <li>
-                                <div class="profile-icon"><i class="fa fa-instagram"></i></div>
+                                <div class="profile-icon"><i class="fab fa-instagram"></i></div>
                                 <div class="profile-intro"><b><a href="http://instagram.com/yura_sultonov">instagram.com/yura_sultonov</a></b></div>
                             </li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-md-6">
                         <a class="cv-btn" href="#"><i class="fa fa-download"></i> Download My CV</a>
                     </div>
                     <div class="col-xs-12 col-md-6">
