added info about me

--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,17 @@ use-site-title: true
                     <div class="col-xs-12 col-sm-4 contact-box">
                         <div class="contact-icon"><i class="fa fa-phone-square"></i></div>
                         <p class="contact-title">Phone</p>
-                        <span class="contact-texts">+2 601-904-1209</span>
+                        <span class="contact-texts">+998-(90)-979-00-58</span>
                     </div>
                     <div class="col-xs-12 col-sm-4 contact-box">
                         <div class="contact-icon"><i class="fa fa-envelope-square"></i></div>
                         <p class="contact-title">Email</p>
-                        <span class="contact-texts"><a href="#">Williamadd@armyspy.com</a></span>
+                        <span class="contact-texts"><a href="mailto:sultonovyura@gmail.com">sultonovyura@gmail.com</a></span>
                     </div>
                     <div class="col-xs-12 col-sm-4 contact-box">
                         <div class="contact-icon"><i class="fa fa-address-book"></i></div>
                         <p class="contact-title">Address</p>
-                        <span class="contact-texts">7 Joseph Street, WI</span>
+                        <span class="contact-texts">Tashkent, Uzbekistan</span>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@ use-site-title: true
         <div class="sub-section">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    &copy; All rights reserved. | Designed by Alex Smith
+                    &copy; All rights reserved. | Powered by Yura Sultonov
                 </div>
             </div>
         </div>
