--- a/employment.html
+++ b/employment.html
@@ -6,30 +6,28 @@ use-site-title: true
 <div id="employment-page" class="page-container">
     <div class="container">
         <div class="page_title text-center">
-            <h2 class="page-title">EMPLOYMENT HISTORY</h2>
+            <h2 class="page-title">EMPLOYMENT</h2>
         </div>
         <div class="sub-section">
-            <h3 class="section-title text-center">Employment</h3>
+            <h3 class="section-title text-center">Employment history</h3>
             <div class="resume-details">
                 <div class="row">
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                2017 - Present
+                                October, 2018 - January, 2019
                                 <div class="box-sub-title">
-                                    Web Development Agency
+                                    "Afex business solutions" LLC
                                 </div>
-                                (Hilton Head Island)
+                                (Tashkent, Uzbekistan)
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="box_dec">
-                                <h3>Managing Director</h3>
+                                <h3>Web & android developer</h3>
                                 <ul class="description">
-                                    <li>Aenean ultrices risus fermentum risus mollis varius.</li>
-                                    <li>Curabitur consequat velit non nisl imperdiet, a scelerisque dui fringilla.</li>
-                                    <li>Maecenas at diam eget diam interdum pharetra.</li>
-                                    <li>Fusce accumsan massa sed dapibus placerat.</li>
+                                    <li>Android development (Java, Kotlin)</li>
+                                    <li>Web development (PHP, Yii2, JS, HTML, CSS)</li>
                                 </ul>
                             </div>
                         </div>
@@ -37,20 +35,19 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                2016 - 2017
+                                July, 2018 - August, 2018
                                 <div class="box-sub-title">
-                                    Web Development Agency
+                                    "Yandex" LLC
                                 </div>
-                                (Hilton Head Island)
+                                (Moscow, Russia)
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="box_dec">
-                                <h3>Team Leader</h3>
+                                <h3>Student of Yandex mobile school</h3>
                                 <ul class="description">
-                                    <li>Donec bibendum massa vitae sapien varius, non condimentum eros lacinia</li>
-                                    <li>Etiam semper risus eget suscipit facilisis</li>
-                                    <li>Nullam vulputate turpis sit amet tellus consequat convallis</li>
+                                    <li>Languages (Java, Kotlin)</li>
+                                    <li>Stack (JetPack, MVP, MVVM, MVI, Dagger2, Moxy, Rx, Cicerone)</li>
                                 </ul>
                             </div>
                         </div>
@@ -58,20 +55,19 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                2014 - 2016
+                                May, 2018 - October, 2018
                                 <div class="box-sub-title">
-                                    Web Development Agency
+                                    "Boostin" LLC
                                 </div>
-                                (Hilton Head Island)
+                                (Tashkent, Uzbekistan)
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="box_dec">
-                                <h3>Senior Developer</h3>
+                                <h3>Co-founder & Head developer</h3>
                                 <ul class="description">
-                                    <li>Donec bibendum massa vitae sapien varius, non condimentum eros lacinia</li>
-                                    <li>Etiam semper risus eget suscipit facilisis</li>
-                                    <li>Nullam vulputate turpis sit amet tellus consequat convallis</li>
+                                    <li>Mobile development (Java, Kotlin, ReactJS, Swift)</li>
+                                    <li>Web development (PHP, Laravel, Yii2, Java Spring, NodeJS, AngularJS)</li>
                                 </ul>
                             </div>
                         </div>
@@ -79,21 +75,121 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                2010 - 2014
+                                August, 2017 - April, 2017
                                 <div class="box-sub-title">
-                                    Web Development Agency
+                                    "Nova-IT" LLC
                                 </div>
-                                (Hilton Head Island)
+                                (Tashkent, Uzbekistan)
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="box_dec">
-                                <h3>Junior Developer</h3>
+                                <h3>Big data developer & analytic</h3>
                                 <ul class="description">
-                                    <li>Aenean ultrices risus fermentum risus mollis varius.</li>
-                                    <li>Curabitur consequat velit non nisl imperdiet, a scelerisque dui fringilla.</li>
-                                    <li>Maecenas at diam eget diam interdum pharetra.</li>
-                                    <li>Fusce accumsan massa sed dapibus placerat.</li>
+                                    <li>Data preprocessing (Python, numpy, scipy, pandas, matplotlib)</li>
+                                    <li>Machine learning (Tensorflow, scikit-learn, keras)</li>
+                                    <li>Trading (NYSE, NASDAQ)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                December, 2016 - April, 2017
+                                <div class="box-sub-title">
+                                    "Sunday Taxi" LLC
+                                </div>
+                                (Urgench, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Android & web developer</h3>
+                                <ul class="description">
+                                    <li>Server-side web app (Java Spring, AngularJS)</li>
+                                    <li>Develop client-side android app (Java)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                August, 2016 - February, 2017
+                                <div class="box-sub-title">
+                                    "Chastte" LLC
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Remote web developer</h3>
+                                <ul class="description">
+                                    <li>Backend of web apps (PHP, Yii, Yii2, CodeIgniter)</li>
+                                    <li>Frontend of web apps (JS, HTML, CSS)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                July, 2016 - June, 2017
+                                <div class="box-sub-title">
+                                    "WolfSofts" LLC
+                                </div>
+                                (Urgench, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Windows and web developer</h3>
+                                <ul class="description">
+                                    <li>Winform Apps (C#, Delphi)</li>
+                                    <li>Web Apps (PHP, CodeIgniter, JS, HTML, CSS)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                March, 2015 - November, 2016
+                                <div class="box-sub-title">
+                                    "PlayMobile" LLC
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Remote web developer</h3>
+                                <ul class="description">
+                                    <li>Backend of web apps (PHP, CodeIgniter, Yii, Yii2, WordPress, DLE, Joomla)</li>
+                                    <li>Frontend of web apps (JS, HTML, CSS)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                September, 2014 - March, 2016
+                                <div class="box-sub-title">
+                                    Urgench branch of TUIT
+                                </div>
+                                (Urgench, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Web developer & System administrator</h3>
+                                <ul class="description">
+                                    <li>Backend of web apps (PHP, CodeIgniter, Smarty, DLE)</li>
+                                    <li>Frontend of web apps (JS, HTML, CSS, Bootstrap)</li>
+                                    <li>Server administration (Kerio Control, Linux, Apache, MySql, Ngnix)</li>
                                 </ul>
                             </div>
                         </div>
