--- a/services.html
+++ b/services.html
@@ -13,6 +13,50 @@ use-site-title: true
                 <div class="col-md-4 col-sm-6">
                     <div class="serviceBox">
                         <div class="service-icon">
+                            <i class="fa fa-mobile-android-alt"></i>
+                        </div>
+                        <h3 class="title">Mobile development</h3>
+                        <p class="description">
+                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="serviceBox">
+                        <div class="service-icon">
+                            <i class="fa fab fa-internet-explorer"></i>
+                        </div>
+                        <h3 class="title">Web development</h3>
+                        <p class="description">
+                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="serviceBox">
+                        <div class="service-icon">
+                            <i class="fa fab fa-windows"></i>
+                        </div>
+                        <h3 class="title">Desktop apps</h3>
+                        <p class="description">
+                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="serviceBox">
+                        <div class="service-icon">
+                            <i class="fa fa-user-secret"></i>
+                        </div>
+                        <h3 class="title">Penetration testing</h3>
+                        <p class="description">
+                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="serviceBox">
+                        <div class="service-icon">
                             <i class="fa fa-paint-brush"></i>
                         </div>
                         <h3 class="title">Website Design</h3>
@@ -24,50 +68,11 @@ use-site-title: true
                 <div class="col-md-4 col-sm-6">
                     <div class="serviceBox">
                         <div class="service-icon">
-                            <i class="fa fa-cube"></i>
-                        </div>
-                        <h3 class="title">Logo Design</h3>
-                        <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="serviceBox">
-                        <div class="service-icon">
-                            <i class="fa fa-dropbox"></i>
-                        </div>
-                        <h3 class="title">Brand Building</h3>
-                        <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="serviceBox">
-                        <div class="service-icon">
                             <i class="fa fa-binoculars"></i>
                         </div>
                         <h3 class="title">SEO</h3>
-                        <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="serviceBox">
-                        <div class="service-icon">
-                            <i class="fa fa-google"></i>
-                        </div>
-                        <h3 class="title">Digital Marketing</h3>
-                        <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="serviceBox">
-                        <div class="service-icon">
-                            <i class="fa fa-youtube-play"></i>
-                        </div>
-                        <h3 class="title">Video Marketing</h3>
-                        <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                        <p class="description">
+                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
                         </p>
                     </div>
                 </div>
