certificates list completed, filled skills page

--- a/education.html
+++ b/education.html
@@ -2,6 +2,7 @@
 layout: base
 title: Education
 use-site-title: true
+js: "/js/education.js"
 ---
 <div id="education-page" class="page-container">
     <div class="container">
@@ -25,7 +26,8 @@ use-site-title: true
                         <div class="col-sm-6">
                             <div class="box_dec">
                                 <h3>Graduate student (master degree)</h3>
-                                <p class="description">Study in the magistracy in the direction of "Information Security"</p>
+                                <p class="description">Study in the magistracy in the direction of "Information
+                                    Security"</p>
                             </div>
                         </div>
                     </div>
@@ -42,7 +44,8 @@ use-site-title: true
                         <div class="col-sm-6">
                             <div class="box_dec">
                                 <h3>Bachelor student</h3>
-                                <p class="description">Four years studied at the university in the faculty of "Computer Engineering".</p>
+                                <p class="description">Four years studied at the university in the faculty of "Computer
+                                    Engineering".</p>
                             </div>
                         </div>
                     </div>
@@ -59,7 +62,8 @@ use-site-title: true
                         <div class="col-sm-6">
                             <div class="box_dec">
                                 <h3>Student in an academic lyceum</h3>
-                                <p class="description">Three years he studied at the academic lyceum in the direction of "exact science".</p>
+                                <p class="description">Three years he studied at the academic lyceum in the direction of
+                                    "exact science".</p>
                             </div>
                         </div>
                     </div>
@@ -81,6 +85,11 @@ use-site-title: true
                         </div>
                     </div>
                 </div>
+            </div>
+            <br>
+            <h3 class="section-title text-center" style="padding: 0;">AWARDS</h3>
+            <h5 class="text-center">Achievements that received in the period of study.</h5>
+            <div class="popup-gallery">
             </div>
         </div>
     </div>
