--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@ use-site-title: true
                     <div class="col-xs-12">
                         <h1>Yura Sultonov</h1>
                         <p><strong>MOBILE/WEB DEVELOPER</strong></p>
-                        <p style="text-align: justify;">Hi. I’m Yuldoshboy(Yura) Sultonov, a software developer from Uzbekistan, Tashkent. I am passionate about building excellent software that improves the lives of those around me. I specialize in creating software for clients ranging from individuals and small-businesses all the way to large enterprise corporations. All of my work is produced locally from Uzbekistan, Tashkent. What would you do if you had a software expert available at your fingertips?</p>
+                        <p style="text-align: justify;">Hi. I’m Yuldoshboy(Yura) Sultonov, a software developer from Uzbekistan. I am passionate about building excellent software that improves the lives of those around me. I specialize in creating software for clients ranging from individuals and small-businesses all the way to large enterprise corporations. All of my work is produced locally from Uzbekistan, Tashkent. What would you do if you had a software expert available at your fingertips?</p>
                     </div>
                     <div class="col-xs-12 col-md-6">
                         <ul class="profile-data">
@@ -63,7 +63,7 @@ use-site-title: true
                         <a class="cv-btn" href="#"><i class="fa fa-download"></i> Download My CV</a>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                        <a class="cv-btn" href="/contact"><i class="fa fa-handshake-o"></i> Hire Me Now</a>
+                        <a class="cv-btn" href="mailto:sultonovyura@gmail.com"><i class="fa fa-handshake-o"></i> Hire Me Now</a>
                     </div>
                 </div>
             </div>
